# easy-protobuffer-reflecion

./: CMakeLists.txt  conanfile.txt
ProtoReflection/: CMakeLists.txt
ProtoReflection/C/: Reflection.cpp  TypeWrapper.cpp
ProtoReflection/H/: Reflection.h  TypeWrapper.h
Tests/: CMakeLists.txt  Reflection_Test.cpp  TypeWrapper_Test.cpp
Tests/protos/: simple.proto
cmake/: dependencies.cmake
